2006.01.24

* Setup all graph.Graph parameters to be initialized.
* Added code for graph.Print and graph.GraphPrint.
* Added code for graph.Comment.
* Added an examples directory.
* Added code for graph.Line
* Added code for graph.Area.
* Finised graph.Graph.
* Added graph.ColorAttributes class for easy OOP-configuration of a graph's
overall color attributes.
* As a first example, added the graph-generating code from the doctests.

2006.01.23

* Added code for VDEF.
* Added TODO.
* Added code for CDEF.
* Created external.py for using the command-line rrdtool binary.
* Added create, update and fetch (with doctests) to external.py.
* Moved old files into an 'old' dir.
* Added graph (with doctests) to external.py.
* Added a place-holder file for supporting the rrdtool python bindings.
* Added a backends.py module for selecting which backend to use.
* Added an rrd.py module for abstracting the database aspect of RRD.
* Added a utils module with a funtion for getting the epoch date of a datetime
object.
* Finished most of rrd.py.
* Added LICENSE, VERSION, setup.py and ez_setup.py.

2006.01.22

* Added old rrdtool sandbox code from CoyMon repository.
* Added unfinished CoyMon rrd lib dir to PyRRD lib dir.
* Added ChangeLog.
* Added some basic library files with stubbs.
* Added most of the class documentation for pyrrd.graph.* and the beginnings
of some implementation.
* Created graph.validateVName and graph.GraphDefinition, a.k.a. graph.DEF and
added doctests to each.
* Added escaping for colons in timedata.
* Added checks for required attributes.

[From the CoyMon ChangeLog]

2004.11.01

* Reorganized RRD libs in adytum.app.coymon.rrd.
* Copied the RRD wrapper in my sandbox to adytum.app.coymon.rrd.graphs.